# PortAudio-Demo

./: README.md
lib/: libportaudio.so.2.0.0
paGetDeviceInfo/: CMakeLists.txt  main.c
paRecord/: CMakeLists.txt  parecord.c
